# megatag

./: FAQ.md  INSTALL.md  README.md  bash_completion  icon.xcf  megatag.pro
cmake/: init_project.txt  process_project.txt
src/: CMakeLists.txt  db.cpp  db.h  graph.h  main.cpp  mega_tray.cpp  mega_tray.h  megatag.cpp  megatag.h  megatool.cpp  megatool.h  megatool_main.cpp
src/sql/: CMakeLists.txt
